fix: add z-index to header

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   position: fixed;
+  z-index: 10;
+  top: 0;
 
   &__logo-container {
     width: 180px;
